--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ body {
 }
 
 .no-money{
- /*opacity:0.5;*/
+ opacity:0.5;
 }
 
 /** this is the the big cupcake */
@@ -218,7 +218,7 @@ body {
 
 /******** Addon Block Styling *******/
 
-.add-on-container{
+.add-on-details, .lvl-details{
     background-color: rgb(231, 238, 241);
     border-radius: 3px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -246,7 +246,7 @@ body {
 }
 
 .mps {
-     font-size: 18px;
+     font-size: 16px;
      padding-left: 15px;
      color: rgb(35, 42, 67);
      font-weight: 600;
@@ -254,11 +254,16 @@ body {
 }
 
 .persec{
-    font-size:14px;
+    font-size:12px;
 }
 
 .addons-block .button{
     width:100%;
+}
+
+
+.lvl-btn .button{
+    font-size:10px;
 }
 
 /****** Start the Icon List *******/
